k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tokei
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"

spec:
  rules:
    - host: tokei.rs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  tokei
                port:
                  number: 8000
